--- a/frontend/resources/styles/main/partials/modal.scss
+++ b/frontend/resources/styles/main/partials/modal.scss
@@ -687,6 +687,8 @@
         padding: $size-4 0;
         border-bottom: 1px solid $color-gray-20;
         position: relative;
+        display: flex;
+        justify-content: space-between;
 
         .item-name {
           color: $color-gray-60;
@@ -707,7 +709,7 @@
           right: 0;
           border: 1px solid $color-primary;
           border-radius: 2px;
-          width: 4.5rem;
+          min-width: 4.5rem;
           background: $color-primary;
           color: $color-black;
           padding: $size-2;
