:bug: Fix word-break on comments, changed to break-word

--- a/frontend/resources/styles/main/partials/comments.scss
+++ b/frontend/resources/styles/main/partials/comments.scss
@@ -191,7 +191,7 @@
         margin: 0 $size-2 0 26px;
         white-space: pre-wrap;
         display: inline-block;
-        word-break: break-all;
+        word-break: break-word;
       }
     }
   }
