--- a/frontend/resources/styles/main/partials/modal.scss
+++ b/frontend/resources/styles/main/partials/modal.scss
@@ -1629,7 +1629,10 @@
   display: flex;
   font-family: "worksans", sans-serif;
   width: 472px;
-  height: auto;
+  height: 100%;
+  max-height: 700px;
+  position: relative;
+  overflow: auto;
   position: relative;
 
   .title {
@@ -1661,11 +1664,10 @@
     &.auth-content {
       align-items: initial;
       height: auto;
-    }
-
-    .links {
-      margin: 7px 0 0 0;
-      text-align: left;
+      .links {
+        margin: 7px 0 0 0;
+        text-align: left;
+      }
     }
   }
 
