:bug: Fix alignment of 'no boards' message in viewer

--- a/frontend/resources/styles/main/partials/viewer.scss
+++ b/frontend/resources/styles/main/partials/viewer.scss
@@ -141,11 +141,6 @@
     align-items: center;
     overflow: hidden;
 
-    .empty-state {
-      justify-content: center;
-      align-items: center;
-    }
-
     svg {
       transform-origin: center;
     }
@@ -167,6 +162,13 @@
     width: 256px;
     height: 100%;
     z-index: 10;
+  }
+
+  .empty-state {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
