--- a/frontend/resources/styles/main/partials/dashboard.scss
+++ b/frontend/resources/styles/main/partials/dashboard.scss
@@ -174,6 +174,10 @@
   &.no-bg {
     background-color: transparent;
   }
+  &.dashboard-shared {
+    width: calc(100vw - 320px);
+    margin-right: 50px;
+  }
 
   &.search {
     margin-top: 10px;
@@ -250,7 +254,7 @@
       line-height: 1rem;
       font-weight: 400;
       color: $color-gray-60;
-      margin-left: .75rem;
+      margin-left: 0.75rem;
     }
 
     .project-actions {
