:wrench: Fix typos in source code
Found via `codespell -q 3 -S *.po,./frontend/yarn.lock -L childs,clen,fpr,inflight,ody,ot,ro,te,trys,ue`

--- a/backend/resources/app/templates/debug.tmpl
+++ b/backend/resources/app/templates/debug.tmpl
@@ -77,7 +77,7 @@ Debug Main Page
       <legend>Import binfile:</legend>
       <desc>Import penpot file in binary
       format. If <strong>overwrite</strong> is checked, all files will
-      be overwriten using the same ids found in the file instead of
+      be overwritten using the same ids found in the file instead of
       generating a new ones.</desc>
 
       <form method="post" enctype="multipart/form-data" action="/dbg/file/import">
@@ -90,7 +90,7 @@ Debug Main Page
           <input type="checkbox" name="overwrite" />
           <br />
           <small>
-            Instead of creating a new file with all relations remaped,
+            Instead of creating a new file with all relations remapped,
             reuses all ids and updates/overwrites the objects that are
             already exists on the database.
             <strong>Warning, this operation should be used with caution.</strong>
@@ -111,7 +111,7 @@ Debug Main Page
           <input type="checkbox" name="ignore-index-errors" checked/>
           <br />
           <small>
-            Do not break on index lookup erros (remap operation).
+            Do not break on index lookup errors (remap operation).
             Useful when importing a broken file that has broken
             relations or missing pieces.
           </small>
