:bug: Fix social buttons in register form

--- a/frontend/resources/styles/main/partials/modal.scss
+++ b/frontend/resources/styles/main/partials/modal.scss
@@ -1678,6 +1678,9 @@
     .terms-login {
       position: relative;
       bottom: 0;
+      span {
+        margin: 0 $size-2;
+      }
     }
   }
 
