:tada: Show spinner while loading viewer file

--- a/frontend/resources/styles/main/partials/viewer.scss
+++ b/frontend/resources/styles/main/partials/viewer.scss
@@ -25,6 +25,12 @@
   }
 }
 
+.viewer-loader {
+  svg#loader-pencil {
+    fill: $color-gray-50;
+  }
+}
+
 .viewer-section {
   height: calc(100vh - 48px);
   grid-row: 1 / span 2;
