:sparkles: Visual adjustments

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -182,6 +182,10 @@
     &.error {
       border-color: $color-danger;
     }
+
+    &[disabled] {
+      color: $color-gray-30;
+    }
   }
 
   .input-select {
