:sparkles: Add several improvements to handoff

--- a/frontend/resources/styles/main/partials/color-bullet.scss
+++ b/frontend/resources/styles/main/partials/color-bullet.scss
@@ -182,7 +182,7 @@ ul.palette-menu .color-bullet {
   }
 }
 
-.color-data .color-bullet.is-not-library-color {
+.color-bullet.is-not-library-color {
   border-radius: $br-small;
 
   & .color-bullet-wrapper {
