--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -1610,6 +1610,7 @@
     .btn-wrapper {
       display: flex;
       width: 100%;
+      max-width: 185px;
       .direction,
       .wrap-type,
       .align-items-style,
@@ -1652,7 +1653,7 @@
           border: none;
           cursor: pointer;
           border-right: 1px solid $color-gray-60;
-          padding: 4px;
+          padding: 2px;
           &.reverse-row {
             svg {
               transform: rotate(180deg);
@@ -1687,11 +1688,15 @@
     align-items: center;
     justify-content: center;
     height: 21px;
-    width: 21px;
+    width: 17px;
     svg {
       height: 0.7rem;
       width: 0.7rem;
     }
+  }
+
+  .wrap {
+    padding: 1px;
   }
 
   .gap-group {
