:tada: Add inspect tab to workspace

--- a/frontend/resources/styles/main/partials/workspace.scss
+++ b/frontend/resources/styles/main/partials/workspace.scss
@@ -47,10 +47,15 @@ $height-palette-max: 80px;
   }
 
   .settings-bar.settings-bar-right {
+    transition: width 0.2s;
     min-width: $width-settings-bar;
-    max-width: 500px;
+    max-width: $width-settings-bar * 3;;
     width: $width-settings-bar;
     grid-area: right-sidebar;
+
+    &.expanded {
+      width: $width-settings-bar * 3;;
+    }
   }
 
   .workspace-loader {
